--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
             <input type="text" name="name">
         </div>
         <div class="form-outer">    
-            <label >Email</label>
+            <label >Address</label>
             <input type="email" name="address">
         </div>
         <div class="form-outer">    
